Fetch and display all products on homepage

--- a/front/html/index.html
+++ b/front/html/index.html
@@ -54,6 +54,7 @@
         <h2>Quality sofas for you home</h2>
       </div>
       <div class="items" id="items">
+        <!--Products are displayed here!-->
       </div>
     </div>
   </main>
