Linked products from homepage to product page

--- a/front/html/product.html
+++ b/front/html/product.html
@@ -52,18 +52,18 @@
       <div class="item">
         <article>
           <div class="item__img">
-            <!-- <img src="../images/logo.png" alt="Photo of a sofa"> -->
+            <!-- Product image and alternative text -->
           </div>
           <div class="item__content">
 
             <div class="item__content__titlePrice">
               <h1 id="title"><!-- Product name --></h1>
-              <p>Prix : <span id="price"><!-- 42 --></span>€</p>
+              <p>Prix : <span id="price"><!-- Product price --></span>€</p>
             </div>
 
             <div class="item__content__description">
               <p class="item__content__description__title">Description:</p>
-              <p id="description"><!-- Dis enim malesuada risus sapien gravida nulla nisl arcu. --></p>
+              <p id="description"><!-- Product description --></p>
             </div>
 
             <div class="item__content__settings">
@@ -71,8 +71,7 @@
                 <label for="colors">Chose your color:</label>
                 <select name="color-select" id="colors">
                   <option value="">--Please, select a color --</option>
-                  <!--                       <option value="vert">green</option>
-                      <option value="blanc">white</option> -->
+                  <!-- Product color panel -->
                 </select>
               </div>
 
