--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -53,38 +53,18 @@
         <h1>Your cart</h1>
         <div class="cart">
           <div id="cart__items">
-            <!--  <article class="cart__item" data-id="{product-ID}" data-color="{product-color}">
-                <div class="cart__item__img">
-                  <img src="../images/product01.jpg" alt="Photo of a sofa">
-                </div>
-                <div class="cart__item__content">
-                  <div class="cart__item__content__description">
-                    <h2>Name of the product</h2>
-                    <p>Green</p>
-                    <p>€42.00</p>
-                  </div>
-                  <div class="cart__item__content__settings">
-                    <div class="cart__item__content__settings__quantity">
-                      <p>Quantity : </p>
-                      <input type="number" class="itemQuantity" name="itemQuantity" min="1" max="100" value="42">
-                    </div>
-                    <div class="cart__item__content__settings__delete">
-                      <p class="deleteItem">Delete</p>
-                    </div>
-                  </div>
-                </div>
-              </article> -->
+            <!--Cart's products are displayed here!-->
           </div>
           <div class="cart__price">
-            <p>Total (<span id="totalQuantity"><!-- 2 --></span> articles) : €<span
-                id="totalPrice"><!-- 84.00 --></span></p>
+            <p>Total (<span id="totalQuantity"><!--Total quantity is displayed here!--></span> articles) : <span
+                id="totalPrice"><!--Total price is displayed here!--></span>€</p>
           </div>
           <div class="cart__order">
             <form method="get" class="cart__order__form">
               <div class="cart__order__form__question">
                 <label for="firstName">First name: </label>
                 <input type="text" name="firstName" id="firstName" required>
-                <p id="firstNameErrorMsg"><!-- this is an error message --></p>
+                <p id="firstNameErrorMsg"><!--This is an error message!--></p>
               </div>
               <div class="cart__order__form__question">
                 <label for="lastName">Name: </label>
