--- a/front/html/confirmation.html
+++ b/front/html/confirmation.html
@@ -51,7 +51,7 @@
     <div class="limitedWidthBlock" id="limitedWidthBlock">
 
       <div class="confirmation">
-        <p>Order confirmed! <br>Your order number is: <span id="orderId"><!-- 65431343444684674 --></span></p>
+        <p>Order confirmed! <br>Your order number is: <span id="orderId"><!--Order ID is displayed here!--></span></p>
       </div>
 
     </div>
